// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Avatar ui default size 1`] = `
<div>
  <span
    class="avatar red"
  >
    <span
      aria-describedby="1"
      role="button"
      style="outline: 0;"
      tabindex="0"
    >
      <span
        class="img-placeholder"
      >
        <img
          alt="A picture of a tomato"
          src="http://lorempixel.com/200/200/"
        />
      </span>
      <h1>
        Children
      </h1>
    </span>
  </span>
</div>
`;

exports[`Component: Avatar ui lg size 1`] = `
<div>
  <span
    class="avatar avatar-lg red"
  >
    <span
      aria-describedby="5"
      role="button"
      style="outline: 0;"
      tabindex="0"
    >
      <span
        class="img-placeholder"
      >
        <img
          alt="A picture of a tomato"
          src="http://lorempixel.com/200/200/"
        />
      </span>
      <h1>
        Children
      </h1>
    </span>
  </span>
</div>
`;

exports[`Component: Avatar ui md size 1`] = `
<div>
  <span
    class="avatar avatar-md red"
  >
    <span
      aria-describedby="4"
      role="button"
      style="outline: 0;"
      tabindex="0"
    >
      <span
        class="img-placeholder"
      >
        <img
          alt="A picture of a tomato"
          src="http://lorempixel.com/200/200/"
        />
      </span>
      <h1>
        Children
      </h1>
    </span>
  </span>
</div>
`;

exports[`Component: Avatar ui sm size 1`] = `
<div>
  <span
    class="avatar avatar-sm red"
  >
    <span
      aria-describedby="3"
      role="button"
      style="outline: 0;"
      tabindex="0"
    >
      <span
        class="img-placeholder"
      >
        <img
          alt="A picture of a tomato"
          src="http://lorempixel.com/200/200/"
        />
      </span>
      <h1>
        Children
      </h1>
    </span>
  </span>
</div>
`;

exports[`Component: Avatar ui xs size 1`] = `
<div>
  <span
    class="avatar avatar-xs red"
  >
    <span
      aria-describedby="2"
      role="button"
      style="outline: 0;"
      tabindex="0"
    >
      <span
        class="img-placeholder"
      >
        <img
          alt="A picture of a tomato"
          src="http://lorempixel.com/200/200/"
        />
      </span>
      <h1>
        Children
      </h1>
    </span>
  </span>
</div>
`;
